v1.1.0/modules/schema/pages/class/MarketEvaluationPoint.adoc
= `MarketEvaluationPoint`
:toclevels: 4


+++The identification of an entity where energy products are measured or computed.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:MarketEvaluationPoint`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/UsagePoint.adoc[`UsagePoint`]
*** *`MarketEvaluationPoint`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<TimeSeries,`TimeSeries`>>
//| [[slots_table.TimeSeries]]<<TimeSeries,`TimeSeries`>>
| 0..* +
xref::class/TimeSeries.adoc[`TimeSeries`]
| _n/a_
| _n/a_

| <<ConfigurationEvents,`ConfigurationEvents`>>
//| [[slots_table.ConfigurationEvents]]<<ConfigurationEvents,`ConfigurationEvents`>>
| 0..* +
xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<CustomerAgreement,`CustomerAgreement`>>
//| [[slots_table.CustomerAgreement]]<<CustomerAgreement,`CustomerAgreement`>>
| 0..1 +
xref::class/CustomerAgreement.adoc[`CustomerAgreement`]
| +++Customer agreement regulating this service delivery point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<EndDeviceControls,`EndDeviceControls`>>
//| [[slots_table.EndDeviceControls]]<<EndDeviceControls,`EndDeviceControls`>>
| 0..* +
xref::class/EndDeviceControl.adoc[`EndDeviceControl`]
| +++All end device controls sending commands to this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<EndDeviceEvents,`EndDeviceEvents`>>
//| [[slots_table.EndDeviceEvents]]<<EndDeviceEvents,`EndDeviceEvents`>>
| 0..* +
xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]
| +++All end device events reported for this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<EndDevices,`EndDevices`>>
//| [[slots_table.EndDevices]]<<EndDevices,`EndDevices`>>
| 0..* +
xref::class/EndDevice.adoc[`EndDevice`]
| +++All end devices at this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<EnvironmentalMonitoringStation,`EnvironmentalMonitoringStation`>>
//| [[slots_table.EnvironmentalMonitoringStation]]<<EnvironmentalMonitoringStation,`EnvironmentalMonitoringStation`>>
| 0..1 +
xref::class/EnvironmentalMonitoringStation.adoc[`EnvironmentalMonitoringStation`]
| _n/a_
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<Equipments,`Equipments`>>
//| [[slots_table.Equipments]]<<Equipments,`Equipments`>>
| 0..* +
xref::class/Equipment.adoc[`Equipment`]
| +++All equipment connecting this usage point to the electrical grid.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<MeterReadSchedule,`MeterReadSchedule`>>
//| [[slots_table.MeterReadSchedule]]<<MeterReadSchedule,`MeterReadSchedule`>>
| 0..1 +
xref::class/MeterReadSchedule.adoc[`MeterReadSchedule`]
| +++Meter read schedule that applies to the usage point+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<MeterReadings,`MeterReadings`>>
//| [[slots_table.MeterReadings]]<<MeterReadings,`MeterReadings`>>
| 0..* +
xref::class/MeterReading.adoc[`MeterReading`]
| +++All meter readings obtained from this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<MeterServiceWorkTasks,`MeterServiceWorkTasks`>>
//| [[slots_table.MeterServiceWorkTasks]]<<MeterServiceWorkTasks,`MeterServiceWorkTasks`>>
| 0..* +
xref::class/MeterWorkTask.adoc[`MeterWorkTask`]
| +++All meter service work tasks at this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<MetrologyRequirements,`MetrologyRequirements`>>
//| [[slots_table.MetrologyRequirements]]<<MetrologyRequirements,`MetrologyRequirements`>>
| 0..* +
xref::class/MetrologyRequirement.adoc[`MetrologyRequirement`]
| +++All metrology requirements for this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<Outage,`Outage`>>
//| [[slots_table.Outage]]<<Outage,`Outage`>>
| 0..* +
xref::class/Outage.adoc[`Outage`]
| +++All outages at this Usage Point+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<PlannedOutageNotification,`PlannedOutageNotification`>>
//| [[slots_table.PlannedOutageNotification]]<<PlannedOutageNotification,`PlannedOutageNotification`>>
| 0..* +
xref::class/PlannedOutageNotification.adoc[`PlannedOutageNotification`]
| +++The planned outage notification for the specified Usage Point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<PricingStructures,`PricingStructures`>>
//| [[slots_table.PricingStructures]]<<PricingStructures,`PricingStructures`>>
| 0..* +
xref::class/PricingStructure.adoc[`PricingStructure`]
| +++All pricing structures applicable to this service delivery point (with prepayment meter running as a stand-alone device,...+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<Register,`Register`>>
//| [[slots_table.Register]]<<Register,`Register`>>
| 0..* +
xref::class/Register.adoc[`Register`]
| +++All registers for quantities metered at this Usage Point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<ServiceCategory,`ServiceCategory`>>
//| [[slots_table.ServiceCategory]]<<ServiceCategory,`ServiceCategory`>>
| 0..1 +
xref::class/ServiceCategory.adoc[`ServiceCategory`]
| +++Service category delivered by this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<ServiceLocation,`ServiceLocation`>>
//| [[slots_table.ServiceLocation]]<<ServiceLocation,`ServiceLocation`>>
| 0..1 +
xref::class/ServiceLocation.adoc[`ServiceLocation`]
| +++Service location where the service delivered by this usage point is consumed.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<ServiceMultipliers,`ServiceMultipliers`>>
//| [[slots_table.ServiceMultipliers]]<<ServiceMultipliers,`ServiceMultipliers`>>
| 0..* +
xref::class/ServiceMultiplier.adoc[`ServiceMultiplier`]
| +++All multipliers applied at this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<ServiceSupplier,`ServiceSupplier`>>
//| [[slots_table.ServiceSupplier]]<<ServiceSupplier,`ServiceSupplier`>>
| 0..1 +
xref::class/ServiceSupplier.adoc[`ServiceSupplier`]
| +++ServiceSupplier (utility) utilising this usage point to deliver a service.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<UsagePointGroups,`UsagePointGroups`>>
//| [[slots_table.UsagePointGroups]]<<UsagePointGroups,`UsagePointGroups`>>
| 0..* +
xref::class/UsagePointGroup.adoc[`UsagePointGroup`]
| +++All groups to which this usage point belongs.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<UsagePointLocation,`UsagePointLocation`>>
//| [[slots_table.UsagePointLocation]]<<UsagePointLocation,`UsagePointLocation`>>
| 0..1 +
xref::class/UsagePointLocation.adoc[`UsagePointLocation`]
| +++Location of this usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<amiBillingReady,`amiBillingReady`>>
//| [[slots_table.amiBillingReady]]<<amiBillingReady,`amiBillingReady`>>
| 0..1 +
xref::enumeration/AmiBillingReadyKind.adoc[`AmiBillingReadyKind`]
| +++Tracks the lifecycle of the metering installation at a usage point with respect to readiness for billing via advanced...+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<checkBilling,`checkBilling`>>
//| [[slots_table.checkBilling]]<<checkBilling,`checkBilling`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if as a result of an inspection or otherwise, there is a reason to suspect that a previous billing may have been...+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<connectionCategory,`connectionCategory`>>
//| [[slots_table.connectionCategory]]<<connectionCategory,`connectionCategory`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++A code used to specify the connection category, e.g., low voltage or low pressure, where the usage point is defined.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<connectionState,`connectionState`>>
//| [[slots_table.connectionState]]<<connectionState,`connectionState`>>
| 0..1 +
xref::enumeration/UsagePointConnectedKind.adoc[`UsagePointConnectedKind`]
| +++State of the usage point with respect to connection to the network.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<disconnectionMethod,`disconnectionMethod`>>
//| [[slots_table.disconnectionMethod]]<<disconnectionMethod,`disconnectionMethod`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Is an indication of how the usage point is physically connected or disconnected.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<estimatedLoad,`estimatedLoad`>>
//| [[slots_table.estimatedLoad]]<<estimatedLoad,`estimatedLoad`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Estimated load.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<grounded,`grounded`>>
//| [[slots_table.grounded]]<<grounded,`grounded`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++True if grounded.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<isSdp,`isSdp`>>
//| [[slots_table.isSdp]]<<isSdp,`isSdp`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, this usage point is a service delivery point, i.e., a usage point where the ownership of the service changes hands.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<isVirtual,`isVirtual`>>
//| [[slots_table.isVirtual]]<<isVirtual,`isVirtual`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, this usage point is virtual, i.e., no physical location exists in the network where a meter could be located to...+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<minimalUsageExpected,`minimalUsageExpected`>>
//| [[slots_table.minimalUsageExpected]]<<minimalUsageExpected,`minimalUsageExpected`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++If true, minimal or zero usage is expected at this usage point for situations such as premises vacancy, logical or physical...+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<nominalServiceVoltage,`nominalServiceVoltage`>>
//| [[slots_table.nominalServiceVoltage]]<<nominalServiceVoltage,`nominalServiceVoltage`>>
| 0..1 +
xref::class/Voltage.adoc[`Voltage`]
| +++Nominal service voltage.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<outageRegion,`outageRegion`>>
//| [[slots_table.outageRegion]]<<outageRegion,`outageRegion`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Outage region in which this usage point is located.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<phaseCode,`phaseCode`>>
//| [[slots_table.phaseCode]]<<phaseCode,`phaseCode`>>
| 0..1 +
xref::enumeration/PhaseCode.adoc[`PhaseCode`]
| +++Phase code. Number of wires and specific nominal phases can be deduced from enumeration literal values. For example, ABCN is...+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<phaseCount,`phaseCount`>>
//| [[slots_table.phaseCount]]<<phaseCount,`phaseCount`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Number of potential phases the Usage Point supports, typically 0, 1 or 3.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<physicalConnectionCapacity,`physicalConnectionCapacity`>>
//| [[slots_table.physicalConnectionCapacity]]<<physicalConnectionCapacity,`physicalConnectionCapacity`>>
| 0..1 +
xref::class/DecimalQuantity.adoc[`DecimalQuantity`]
| +++Quantitative information about the maximum physical capacity of the connection for the usage point.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<ratedCurrent,`ratedCurrent`>>
//| [[slots_table.ratedCurrent]]<<ratedCurrent,`ratedCurrent`>>
| 0..1 +
xref::class/CurrentFlow.adoc[`CurrentFlow`]
| +++Current flow that this usage point is configured to deliver.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<ratedPower,`ratedPower`>>
//| [[slots_table.ratedPower]]<<ratedPower,`ratedPower`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Active power that this usage point is configured to deliver.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<readCycle,`readCycle`>>
//| [[slots_table.readCycle]]<<readCycle,`readCycle`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Cycle day on which the meter for this usage point will normally be read.  Usually correlated with the billing cycle.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<readRoute,`readRoute`>>
//| [[slots_table.readRoute]]<<readRoute,`readRoute`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Identifier of the route to which this usage point is assigned for purposes of meter reading. Typically used to configure...+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<serviceDeliveryRemark,`serviceDeliveryRemark`>>
//| [[slots_table.serviceDeliveryRemark]]<<serviceDeliveryRemark,`serviceDeliveryRemark`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Remarks about this usage point, for example the reason for it being rated with a non-nominal priority.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<servicePriority,`servicePriority`>>
//| [[slots_table.servicePriority]]<<servicePriority,`servicePriority`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Priority of service for this usage point. Note that usage points at the same service location can have different priorities.+++
| xref::class/UsagePoint.adoc[`UsagePoint`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#amiBillingReady]
=== `amiBillingReady`
+++Tracks the lifecycle of the metering installation at a usage point with respect to readiness for billing via advanced metering infrastructure reads.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.amiBillingReady`
| Cardinality
| 0..1
| Type
| xref::enumeration/AmiBillingReadyKind.adoc[`AmiBillingReadyKind`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.amiBillingReady,&#10548;>>
--
////


//[discrete]
[#checkBilling]
=== `checkBilling`
+++True if as a result of an inspection or otherwise, there is a reason to suspect that a previous billing may have been performed with erroneous data. Value should be reset once this potential discrepancy has been resolved.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.checkBilling`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.checkBilling,&#10548;>>
--
////


//[discrete]
[#ConfigurationEvents]
=== `ConfigurationEvents`
+++All configuration events created for this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.ConfigurationEvents`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ConfigurationEvents,&#10548;>>
--
////


//[discrete]
[#connectionCategory]
=== `connectionCategory`
+++A code used to specify the connection category, e.g., low voltage or low pressure, where the usage point is defined.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.connectionCategory`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.connectionCategory,&#10548;>>
--
////


//[discrete]
[#connectionState]
=== `connectionState`
+++State of the usage point with respect to connection to the network.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.connectionState`
| Cardinality
| 0..1
| Type
| xref::enumeration/UsagePointConnectedKind.adoc[`UsagePointConnectedKind`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.connectionState,&#10548;>>
--
////


//[discrete]
[#CustomerAgreement]
=== `CustomerAgreement`
+++Customer agreement regulating this service delivery point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.CustomerAgreement`
| Cardinality
| 0..1
| Type
| xref::class/CustomerAgreement.adoc[`CustomerAgreement`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.CustomerAgreement,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#disconnectionMethod]
=== `disconnectionMethod`
+++Is an indication of how the usage point is physically connected or disconnected.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.disconnectionMethod`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.disconnectionMethod,&#10548;>>
--
////


//[discrete]
[#EndDeviceControls]
=== `EndDeviceControls`
+++All end device controls sending commands to this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.EndDeviceControls`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceControl.adoc[`EndDeviceControl`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.EndDeviceControls,&#10548;>>
--
////


//[discrete]
[#EndDeviceEvents]
=== `EndDeviceEvents`
+++All end device events reported for this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.EndDeviceEvents`
| Cardinality
| 0..*
| Type
| xref::class/EndDeviceEvent.adoc[`EndDeviceEvent`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.EndDeviceEvents,&#10548;>>
--
////


//[discrete]
[#EndDevices]
=== `EndDevices`
+++All end devices at this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.EndDevices`
| Cardinality
| 0..*
| Type
| xref::class/EndDevice.adoc[`EndDevice`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.EndDevices,&#10548;>>
--
////


//[discrete]
[#EnvironmentalMonitoringStation]
=== `EnvironmentalMonitoringStation`



[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.EnvironmentalMonitoringStation`
| Cardinality
| 0..1
| Type
| xref::class/EnvironmentalMonitoringStation.adoc[`EnvironmentalMonitoringStation`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.EnvironmentalMonitoringStation,&#10548;>>
--
////


//[discrete]
[#Equipments]
=== `Equipments`
+++All equipment connecting this usage point to the electrical grid.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.Equipments`
| Cardinality
| 0..*
| Type
| xref::class/Equipment.adoc[`Equipment`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.Equipments,&#10548;>>
--
////


//[discrete]
[#estimatedLoad]
=== `estimatedLoad`
+++Estimated load.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.estimatedLoad`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.estimatedLoad,&#10548;>>
--
////


//[discrete]
[#grounded]
=== `grounded`
+++True if grounded.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.grounded`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.grounded,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#isSdp]
=== `isSdp`
+++If true, this usage point is a service delivery point, i.e., a usage point where the ownership of the service changes hands.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.isSdp`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.isSdp,&#10548;>>
--
////


//[discrete]
[#isVirtual]
=== `isVirtual`
+++If true, this usage point is virtual, i.e., no physical location exists in the network where a meter could be located to collect the meter readings. For example, one may define a virtual usage point to serve as an aggregation of usage for all of a company's premises distributed widely across the distribution territory. Otherwise, the usage point is physical, i.e., there is a logical point in the network where a meter could be located to collect meter readings.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.isVirtual`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.isVirtual,&#10548;>>
--
////


//[discrete]
[#MeterReadings]
=== `MeterReadings`
+++All meter readings obtained from this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.MeterReadings`
| Cardinality
| 0..*
| Type
| xref::class/MeterReading.adoc[`MeterReading`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.MeterReadings,&#10548;>>
--
////


//[discrete]
[#MeterReadSchedule]
=== `MeterReadSchedule`
+++Meter read schedule that applies to the usage point+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.MeterReadSchedule`
| Cardinality
| 0..1
| Type
| xref::class/MeterReadSchedule.adoc[`MeterReadSchedule`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.MeterReadSchedule,&#10548;>>
--
////


//[discrete]
[#MeterServiceWorkTasks]
=== `MeterServiceWorkTasks`
+++All meter service work tasks at this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.MeterServiceWorkTasks`
| Cardinality
| 0..*
| Type
| xref::class/MeterWorkTask.adoc[`MeterWorkTask`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.MeterServiceWorkTasks,&#10548;>>
--
////


//[discrete]
[#MetrologyRequirements]
=== `MetrologyRequirements`
+++All metrology requirements for this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.MetrologyRequirements`
| Cardinality
| 0..*
| Type
| xref::class/MetrologyRequirement.adoc[`MetrologyRequirement`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.MetrologyRequirements,&#10548;>>
--
////


//[discrete]
[#minimalUsageExpected]
=== `minimalUsageExpected`
+++If true, minimal or zero usage is expected at this usage point for situations such as premises vacancy, logical or physical disconnect. It is used for readings validation and estimation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.minimalUsageExpected`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.minimalUsageExpected,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#nominalServiceVoltage]
=== `nominalServiceVoltage`
+++Nominal service voltage.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.nominalServiceVoltage`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.nominalServiceVoltage,&#10548;>>
--
////


//[discrete]
[#Outage]
=== `Outage`
+++All outages at this Usage Point+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.Outage`
| Cardinality
| 0..*
| Type
| xref::class/Outage.adoc[`Outage`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.Outage,&#10548;>>
--
////


//[discrete]
[#outageRegion]
=== `outageRegion`
+++Outage region in which this usage point is located.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.outageRegion`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.outageRegion,&#10548;>>
--
////


//[discrete]
[#phaseCode]
=== `phaseCode`
+++Phase code. Number of wires and specific nominal phases can be deduced from enumeration literal values. For example, ABCN is three-phase, four-wire, s12n (splitSecondary12N) is single-phase, three-wire, and s1n and s2n are single-phase, two-wire.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.phaseCode`
| Cardinality
| 0..1
| Type
| xref::enumeration/PhaseCode.adoc[`PhaseCode`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.phaseCode,&#10548;>>
--
////


//[discrete]
[#phaseCount]
=== `phaseCount`
+++Number of potential phases the Usage Point supports, typically 0, 1 or 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.phaseCount`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.phaseCount,&#10548;>>
--
////


//[discrete]
[#physicalConnectionCapacity]
=== `physicalConnectionCapacity`
+++Quantitative information about the maximum physical capacity of the connection for the usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.physicalConnectionCapacity`
| Cardinality
| 0..1
| Type
| xref::class/DecimalQuantity.adoc[`DecimalQuantity`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.physicalConnectionCapacity,&#10548;>>
--
////


//[discrete]
[#PlannedOutageNotification]
=== `PlannedOutageNotification`
+++The planned outage notification for the specified Usage Point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.PlannedOutageNotification`
| Cardinality
| 0..*
| Type
| xref::class/PlannedOutageNotification.adoc[`PlannedOutageNotification`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.PlannedOutageNotification,&#10548;>>
--
////


//[discrete]
[#PricingStructures]
=== `PricingStructures`
+++All pricing structures applicable to this service delivery point (with prepayment meter running as a stand-alone device, with no CustomerAgreement or Customer).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.PricingStructures`
| Cardinality
| 0..*
| Type
| xref::class/PricingStructure.adoc[`PricingStructure`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.PricingStructures,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#ratedCurrent]
=== `ratedCurrent`
+++Current flow that this usage point is configured to deliver.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.ratedCurrent`
| Cardinality
| 0..1
| Type
| xref::class/CurrentFlow.adoc[`CurrentFlow`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ratedCurrent,&#10548;>>
--
////


//[discrete]
[#ratedPower]
=== `ratedPower`
+++Active power that this usage point is configured to deliver.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.ratedPower`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ratedPower,&#10548;>>
--
////


//[discrete]
[#readCycle]
=== `readCycle`
+++Cycle day on which the meter for this usage point will normally be read.  Usually correlated with the billing cycle.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.readCycle`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.readCycle,&#10548;>>
--
////


//[discrete]
[#readRoute]
=== `readRoute`
+++Identifier of the route to which this usage point is assigned for purposes of meter reading. Typically used to configure hand held meter reading systems prior to collection of reads.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.readRoute`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.readRoute,&#10548;>>
--
////


//[discrete]
[#Register]
=== `Register`
+++All registers for quantities metered at this Usage Point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.Register`
| Cardinality
| 0..*
| Type
| xref::class/Register.adoc[`Register`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.Register,&#10548;>>
--
////


//[discrete]
[#ServiceCategory]
=== `ServiceCategory`
+++Service category delivered by this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.ServiceCategory`
| Cardinality
| 0..1
| Type
| xref::class/ServiceCategory.adoc[`ServiceCategory`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ServiceCategory,&#10548;>>
--
////


//[discrete]
[#serviceDeliveryRemark]
=== `serviceDeliveryRemark`
+++Remarks about this usage point, for example the reason for it being rated with a non-nominal priority.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.serviceDeliveryRemark`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.serviceDeliveryRemark,&#10548;>>
--
////


//[discrete]
[#ServiceLocation]
=== `ServiceLocation`
+++Service location where the service delivered by this usage point is consumed.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.ServiceLocation`
| Cardinality
| 0..1
| Type
| xref::class/ServiceLocation.adoc[`ServiceLocation`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ServiceLocation,&#10548;>>
--
////


//[discrete]
[#ServiceMultipliers]
=== `ServiceMultipliers`
+++All multipliers applied at this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.ServiceMultipliers`
| Cardinality
| 0..*
| Type
| xref::class/ServiceMultiplier.adoc[`ServiceMultiplier`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ServiceMultipliers,&#10548;>>
--
////


//[discrete]
[#servicePriority]
=== `servicePriority`
+++Priority of service for this usage point. Note that usage points at the same service location can have different priorities.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.servicePriority`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.servicePriority,&#10548;>>
--
////


//[discrete]
[#ServiceSupplier]
=== `ServiceSupplier`
+++ServiceSupplier (utility) utilising this usage point to deliver a service.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.ServiceSupplier`
| Cardinality
| 0..1
| Type
| xref::class/ServiceSupplier.adoc[`ServiceSupplier`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.ServiceSupplier,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TimeSeries]
=== `TimeSeries`



[cols="h,4",width=65%]
|===
| URI
| `cim:MarketEvaluationPoint.TimeSeries`
| Cardinality
| 0..*
| Type
| xref::class/TimeSeries.adoc[`TimeSeries`]


|===

////
[.text-left]
--
<<slots_table.TimeSeries,&#10548;>>
--
////


//[discrete]
[#UsagePointGroups]
=== `UsagePointGroups`
+++All groups to which this usage point belongs.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.UsagePointGroups`
| Cardinality
| 0..*
| Type
| xref::class/UsagePointGroup.adoc[`UsagePointGroup`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.UsagePointGroups,&#10548;>>
--
////


//[discrete]
[#UsagePointLocation]
=== `UsagePointLocation`
+++Location of this usage point.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:UsagePoint.UsagePointLocation`
| Cardinality
| 0..1
| Type
| xref::class/UsagePointLocation.adoc[`UsagePointLocation`]

| Inherited from
| xref::class/UsagePoint.adoc[`UsagePoint`]


|===

////
[.text-left]
--
<<slots_table.UsagePointLocation,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/TimeSeries.adoc[`TimeSeries`] | xref::class/TimeSeries.adoc#MarketEvaluationPoint[`MarketEvaluationPoint`]


|===

